--- a/parcial02/06_form.html
+++ b/parcial02/06_form.html
@@ -1,11 +1,61 @@
+<!-- https://matiashernandez.dev/blog/post/handling-forms-with-vanilla-javascript -->
 <!DOCTYPE html>
 <html>
+
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Parcial 02</title>
+
+	<style type="text/css">
+		
+	</style>
+
+	<script type="text/javascript">
+		document.addEventListener('DOMContentLoaded',
+                function (event){
+                	const form = document.getElementById("form01"); // Obtiene elemento HTML
+                	form.addEventListener("submit", onFormSubmit); // Agrega evento 
+                });
+
+		function onFormSubmit(event) {
+			console.log("Click");
+			event.preventDefault(); // Detiene el comportamiento natural
+			
+			// Obtener info del FORM
+			const data = new FormData(event.target);
+			
+			// Mostrar toda la info de FORM (array)
+			console.log("\tFORM array");
+			const dataObject = Object.fromEntries(data.entries());
+			console.log(dataObject);
+			
+			//Mostrar toda la info FORM (item)
+			console.log("\tFORM item");
+			data.forEach( (value, key) => 
+			{
+				console.log(`${key}: ${value}`); // ejemplo de string cemamut
+				console.log("key:"+key+" => "+value); // ejemplo string gente normal y corriente (humanos)
+			});
+
+			// Mostar info por elemento
+			console.log("\tFORM element");
+			const name = data.get("name");
+			const email = data.get("email");
+			
+			console.log(`Name: ${name}, Email: ${email}`);
+		}
+	</script>
 </head>
+
 <body>
+
+	<form id="form01">
+		<input type="text" name="name" placeholder="Ingresa nombre" />
+		<input type="email" name="email" placeholder="Ingresa email" />
+
+		<button type="submit">Enviar</button>
+	</form>
 
 </body>
 </html>
